--- a/index.css
+++ b/index.css
@@ -93,6 +93,16 @@
     padding: 1rem 0;
     color: pink;
   }
+  .theme{
+    grid-column: 1/2;
+    grid-row: 1/3;
+    align-self: center;
+  }
+  .theme-label{
+    display: flex;
+    justify-content: space-around;
+    align-self: center;
+}
   .calc p {
     margin: 0.5rem;
     font-size: 2.2rem;
@@ -106,7 +116,7 @@
     );
     margin: 1rem 0px;
     border-radius: 10px;
-    height: 36px;
+    height: 112px;
     text-align: right;
     font-size: 2.2rem;
     font-weight: bold;
@@ -114,7 +124,6 @@
   }
   div label {
     font-size: 1rem;
-    padding-left: 12px;
     color: white;
   }
   
@@ -175,28 +184,51 @@
     background-color: var(
       --VeryDarkDesaturatedBlue_toggleBackground-keypadBackground
     );
-    align-items: center;
-    display: flex;
-    padding: 0.1em 0.5rem;
     border-radius: 25px;
+    display: flex;
+    justify-content: space-around;
+    padding: 5px 0;
+  }
+  .div-radio:first-child td:first-child {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
   }
   .themeDiv {
     font-size: 1.5rem;
-    display: flex;
-    align-items: center;
+    text-align: center;
     color: white;
-  }
-  input:not(.first) {
-    margin: 2px 2px 2px 14px;
-  }
-  .first {
-    margin: 2px 2px 2px 0px;
+    display: grid;
+    width: 200px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
   }
 /*____designing custom radio buttons____*/
   input {
     opacity: 0;
-    width: 0;
-    height: 0;
+    width: 2rem;
+    height: 2rem;
+    margin: 0;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    display: block;
+    z-index: 1;
+    position: absolute;
+  }
+  .radio-input{
+    display: block;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    border: 0.1em solid orange;
+  }
+  input:checked + .radio-input {
+    background-color: orange;
+  }
+  .div-radio td{
+    vertical-align: middle;
+    display: table-cell;
   }
   
   .attribution {
