--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@
     color: white;
   }
   
-  div.numbers {
+  main.numbers {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -131,7 +131,7 @@
     min-width: 300px;
     border-radius: 10px;
   }
-  div.numbers button {
+  main.numbers button {
     padding: 0.75rem 1.5rem;
     margin: 0.5rem;
     background-color: var(--LightGrayishOrange_key-background);
@@ -146,7 +146,7 @@
     font-weight: bold;
     color: var(--textColor1-Th1);
   }
-  div.numbers .row5_1 {
+  main.numbers .row5_1 {
     grid-column: 1/3;
     padding: 0.65rem 1rem;
     background-color: var(--blueKey-Th1);
@@ -154,7 +154,7 @@
     color: white;
     font-size: 1.5rem;
   }
-  div.numbers .row5_2 {
+  main.numbers .row5_2 {
     grid-column: 3/5;
     padding: 0.65rem 1rem;
     background-color: var(--Th1-key-bg-toggle);
@@ -162,16 +162,16 @@
     color: white;
     font-size: 1.5rem;
   }
-  div.numbers .del {
+  main.numbers .del {
     font-size: 1.5rem;
   }
   @media screen and (min-width: 756px) {
-    div.numbers .row5_2,
-    div.numbers .row5_1,
-    div.numbers .del {
+    main.numbers .row5_2,
+    main.numbers .row5_1,
+    main.numbers .del {
       font-size: 2rem;
     }
-    div.numbers button {
+    main.numbers button {
       padding: 0rem 0.75rem;
     }
   }
